# c_bag_of_tricks

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  LICENSE  README.md  build.cmd  cbot-test.pro  cbot.pro  cbot_test.pro  conventions.md  main.c  main.cpp  make_test.cmd  proc-mem.py  proc_mem.py  run-heob.bat  run-mem-chk.bat  run-probe.cmd  run.cmd  run_probe.cmd  run_test.cmd  test.cmd
cbot_module/: common.h  dict.h  list.h  state_machine.h  stringx.h
cbot_module/private/: dict.c  list.c  state_machine.c  stringx.c
cbot_win/: ftimer.h  stopwatch.h
cbot_win/private/: ftimer.c  stopwatch.c
msvc/: cbot_msvc.sln  cbot_msvc.vcxproj  cbot_msvc.vcxproj.filters  main.cpp
pnut/: pnut.cpp  pnut.h
source/: cbot.h  chksum.h  cli.h  common.h  diagnostics.h  dict.c  dict.h  ftimer.h  list.c  list.h  logger.h  main.c  pnut.cpp  source.pro  state-machine.c  state-machine.h  state_machine.c  state_machine.h  status.h  stringx.c  stringx.h  timeanalyzer.h
source/private/: cbot_internal.h  chksum.c  cli.c  common.c  dict.c  error.c  ftimer.c  list.c  logger.c  mathutils.c  state_machine.c  status.c  stopwatch.c  stringx.c  timeanalyzer.c
source_code/: cbot.h  diagnostics.h  dict.h  ftimer.h  mathutils.h
source_code/private/: cbot_internal.h  dict.c  ftimer.c  logger.c  mathutils.c  stringx.c
test/: hemingway.txt  hemingway_short.txt  lock.c  lock.h  main.cpp  pnut.cpp  pnut.h  run_mem_chk.bat  run_probe.cmd  test-list.cpp  test-pnut.cpp  test-sm.cpp  test.pro  test_chksum.cpp  test_cli.cpp  test_common.cpp  test_diagnostics.cpp  test_dict.cpp  test_ftimer.cpp  test_internal.cpp  test_list.cpp  test_logger.cpp  test_mathutils.cpp  test_pnut.cpp  test_sm.cpp  test_stopwatch.cpp  test_stringx.cpp  test_timeanalyzer.cpp
test/files/: hemingway_short.txt
test_code/: lock.c  main.cpp  test_diagnostics.cpp  test_dict.cpp  test_list.cpp  test_mathutils.cpp  test_pnut.cpp  test_sm.cpp  test_stopwatch.cpp  test_stringx.cpp
test_code/files/: dict_101.csv
